feat: nginx設定管理機能とLocationヘッダー書き換え機能を追加
- バックエンド: nginx設定管理API追加（status/config/enable-full-proxy/reload/test）
- フロントエンド: Settings画面にNginx Configuration セクション追加
- プロキシ: Locationヘッダー書き換え機能追加（リダイレクト対応）
- DB: /paraclateルートをinit_mysql.sqlに追加
- urlクレートを依存関係に追加

これにより、UIからnginxを全転送モードに切り替え可能になり、
以降の全てのルート設定がUIから管理可能になる

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -37,6 +37,9 @@ chrono = { version = "0.4", features = ["serde"] }
 # UUID
 uuid = { version = "1", features = ["v4", "serde"] }
 
+# URL parsing
+url = "2"
+
 # Error handling
 thiserror = "1"
 anyhow = "1"
